fix top and bottom margins on mobile in pricing page

--- a/src/App.css
+++ b/src/App.css
@@ -444,6 +444,14 @@ a:hover {
         align-self: center;
     }
 
+    .pricing-intro {
+        margin-top: 30%;
+    }
+
+    .additional-services {
+        margin-bottom: 30%;
+    }
+
     li {
         width: auto;
     }
